# fog-compute

./: .coverage  .dockerignore  .env.example  .gitignore  AUDIT-LOGGING-INTEGRATION.md  BETANET-CONSOLIDATION-SUMMARY.md  BETANET-INTEGRATION-FIX-SUMMARY.md  BETANET-STRUCTURE.txt  BITCHAT-CONSOLIDATION-REPORT.md  CI-CD-FIX-README.md  CI-FIX-PLAN-2026-01-02.md  CI_CD_FIX_IMPLEMENTATION_PLAN.md  CONFIGURATION_DELIVERY.md  CONSOLIDATION-COMPLETE.md  CONTROL-PANEL-SUMMARY.md  Cargo.toml  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  Dockerfile.betanet  FOG-COMPUTE-ANALYSIS-REPORT.md  FOG-CONSOLIDATION-COMPLETE.md  IMPLEMENTATION-GAP-ANALYSIS.md  IMPLEMENTATION_STATUS.md  MOCK-04-DASHBOARD-API-FIX-SUMMARY.md  PHASE-2-IMPLEMENTATION-SUMMARY.md  PR-DESCRIPTION.md  README.md  SEC-06-IMPLEMENTATION-SUMMARY.md  SECURITY-FIX-SUMMARY.md  SECURITY-FIX-SUMMARY.txt  SERVICE_INTEGRATION_FIXES.txt  SPRINT-1-COMPLETION.md  TESTING-DELIVERABLES.md  ULTRATHINK_IMPLEMENTATION_PLAN.md  ULTRATHINK_REVISED_PLAN.md  VALIDATION-REPORT.md  benchmark_output.txt  benchmark_results.json  docker-compose.betanet.yml  docker-compose.dev.yml  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: e2e-tests.yml  node-tests.yml  performance-benchmarks.yml  rust-tests.yml
.swarm/: memory.db  senior-dev-3-test-validation.json
apps/control-panel/: .env.local.example  ARCHITECTURE.md  BETANET_IMPLEMENTATION_COMPLETE.md  BETANET_INTEGRATION_INSTRUCTIONS.md  Dockerfile  Dockerfile.dev  README.md  SETUP.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
backend/: API_KEY_FILE_MANIFEST.txt  API_KEY_IMPLEMENTATION_CHECKLIST.md  API_KEY_IMPLEMENTATION_SUMMARY.md  API_KEY_QUICK_REFERENCE.md  Dockerfile  README.md  alembic.ini  pytest.ini  requirements.txt  test_dashboard_api.py
backend/alembic/: env.py
backend/data/: dao_tokenomics.db
backend/server/: config.py  constants.py  database.py  main.py
backend/test_profiling_reports/: test_report.html
backend/tests/: conftest.py  constants.py  run_crypto_tests.py  run_integration_tests.py  test_auth_security.py  test_betanet_e2e.py  test_betanet_e2e.py.disabled  test_betanet_vpn_integration.py  test_bitchat_advanced.py  test_bitchat_integration.py  test_cache_service.py  test_container_orchestration.py  test_deployment_deletion_cleanup.py  test_fog_optimization.py  test_load_balancer_routes.py  test_memory_profiler.py  test_mfa.py  test_orchestration.py  test_p2p_bitchat_integration.py  test_password_reset_unit.py  test_resource_optimization.py  test_vpn_crypto.py  (+2 more)
benchmarks/: Cargo.toml  README.md  betanet_throughput.rs  bitchat_latency.ts  control_panel_render.ts  performance-budget.json  run_all_benchmarks.sh  system_integration.py
config/: prometheus.yml
docs/: ARCHITECTURAL_ANALYSIS.md  BETANET-INTEGRATION.md  BETANET_COMPONENTS_IMPLEMENTATION.md  BETANET_DELAY_INJECTION.md  BETANET_L4_ENHANCEMENTS.md  BETANET_NETWORK_IMPLEMENTATION.md  BETANET_NETWORK_SUMMARY.md  BETANET_PROTOCOL_VERSIONING.md  BETANET_RELAY_LOTTERY.md  BETANET_VPN_MIGRATION_GUIDE.md  BITCHAT_ADVANCED_FEATURES.md  BITCHAT_BACKEND_IMPLEMENTATION.md  BITCHAT_QUICK_START.md  CACHE-QUICK-REFERENCE.md  CI-RESULTS-ANALYSIS.md  CI_FIX_SUMMARY.md  CONSOLIDATION_ROADMAP.md  CRITICAL_FINDINGS_SUMMARY.md  DATABASE_SETUP_COMPLETE.md  DEPLOYMENT-SCHEDULING-QUICK-START.md  DEPLOYMENT_SCHEMA_DESIGN.md  DEPLOYMENT_SCHEMA_QUICK_REFERENCE.md  DOCKER_CONSOLIDATION.md  DOCKER_CONSOLIDATION_SUMMARY.md  E2E_TEST_ENVIRONMENT_READY.md  EXECUTIVE_SUMMARY.md  FIX_CHECKLIST.md  FOG_LAYER_OPTIMIZATION.md  FOG_QUICK_START.md  FUNC-01-DEPLOYMENT-SCHEDULING-IMPLEMENTATION.md  FUNC-01-KEY-CODE-CHANGES.md  FUNC-02-COMPLETION-SUMMARY.md  FUNC-02-SCALING-IMPLEMENTATION.md  FUNC-02-TESTING-GUIDE.md  FUNC-03-IMPLEMENTATION-SUMMARY.md  FUNC-03-KEY-CODE-CHANGES.md  FUNC-03-REQUIREMENTS-CHECKLIST.md  FUNC-04-DEPLOYMENT-LISTING-IMPLEMENTATION.md  FUNC-04-KEY-CODE-CHANGES.md  FUNC-05-DEPLOYMENT-DELETION-IMPLEMENTATION.md  (+80 more)
monitoring/: .env.example  README.md  docker-compose.monitoring.yml  prometheus.yml  start-monitoring.sh
monitoring/exporters/: BETANET_CLIENT_README.md  Cargo.toml  Dockerfile.betanet-exporter  Dockerfile.bitchat-exporter  METRIC_COLLECTOR_README.md  QUICK_START.md  aggregator.rs  betanet_client.rs  betanet_exporter.rs  bitchat_exporter.ts  memory_exporter.py  metric_collector.rs  package.json  test-exporter.sh  test-metric-collector.sh  tsconfig.json
scripts/: benchmark_betanet_vpn.py  benchmark_comprehensive.py  benchmark_delay_injection.py  benchmark_fog_layer.py  benchmark_resource_optimization.py  capture-screenshots.js  create_databases.sql  run-tests-with-services.bat  run-tests-with-services.sh  screenshot-ui.js  setup-test-db.bat  setup-test-db.sh  setup_db.py  test-docker-configs.bat  test-docker-configs.sh  test_p2p_integration.py  validate-notification-system.sh
src/betanet/: Cargo.toml  README.md  cover.rs  lib.rs  pipeline.rs
src/betanet/core/: compatibility.rs  mixnode.rs  mod.rs  protocol_version.rs  relay_lottery.rs  reputation.rs  routing.rs  versions.rs
src/betanet/crypto/: crypto.rs  mod.rs  sphinx.rs
src/betanet/examples/: pipeline_benchmark.rs  simple_mixnode.rs
src/betanet/pipeline/: batching.rs  mod.rs
src/betanet/server/: http.rs  mod.rs  tcp.rs
src/betanet/tests/: l4_functionality_tests.rs  mod.rs  test_delay_injection.rs  test_delay_injection.rs.disabled  test_networking.rs  test_protocol_versioning.rs  test_relay_lottery.rs
src/betanet/utils/: mod.rs  rate.rs  timing_defense.rs
src/betanet/vrf/: mod.rs  poisson_delay.rs  poisson_delay_backup.rs  vrf_delay.rs  vrf_neighbor.rs
tests/: QUALITY-PANEL-QUICK-START.md  QUALITY-PANEL-TEST-SUMMARY.md  README.md  TEST-SUITE-SUMMARY.md  UI-01-UI-02-COMPLETION-SUMMARY.md  setup.ts  test_deployment_deletion.py  test_memory_monitoring_integration.py  test_memory_profiler.py  test_reward_distribution.py  verify-quality-panel-tests.sh  verify_security_fix.py
tests/rust/: Cargo.toml  betanet_integration_tests.rs  betanet_unit_tests.rs
(+389 files in other folders)
