[workspace]
members = ["src/betanet"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Fog Compute Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/fog-compute"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Cryptography
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
schnorrkel = { version = "0.11", features = ["vrf"] }
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"

# Utilities
bytes = "1.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Collections
dashmap = "5.5"
indexmap = "2.1"

# Networking
libp2p = { version = "0.53" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"