[package]
name = "fog-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Fog Compute Team"]
license = "MIT"

[[bin]]
name = "betanet_throughput"
path = "betanet_throughput.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Cryptography
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"

# Utilities
bytes = "1.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"

# Performance
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
