[workspace]

[package]
name = "betanet_exporter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "betanet_exporter"
path = "betanet_exporter.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
prometheus = "0.13"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"