[package]
name = "betanet"
version = "0.2.0"
edition = "2021"
authors = ["Betanet Team"]
description = "High-performance privacy network mixnode implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fog-compute/betanet"

[features]
default = ["sphinx", "dep:vrf"]
sphinx = []
# vrf feature removed - use dep:vrf instead
cover-traffic = []
all = ["sphinx", "dep:vrf", "cover-traffic"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
curve25519-dalek = "4.1"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
rand_core = "0.6"

# VRF
vrf = { version = "0.3", optional = true }

# Networking
bytes = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Utilities
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"

[[bench]]
name = "pipeline_benchmark"
harness = false

[[example]]
name = "simple_mixnode"
path = "examples/simple_mixnode.rs"

[[example]]
name = "pipeline_benchmark"
path = "examples/pipeline_benchmark.rs"