[package]
name = "betanet"
version = "0.2.0"
edition = "2021"
authors = ["Betanet Team"]
description = "High-performance privacy network mixnode implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fog-compute/betanet"
autoexamples = false  # Disable auto-discovery of examples (they can't resolve crate imports)

[lib]
name = "betanet"
path = "lib.rs"

[features]
default = ["sphinx", "vrf"]
sphinx = []
vrf = ["dep:vrf", "dep:schnorrkel"]  # Feature that enables the optional vrf dependency
cover-traffic = []
all = ["sphinx", "vrf", "cover-traffic"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
curve25519-dalek = "4.1"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
rand_core = "0.6"

# VRF (using 0.2.x - version 0.3 doesn't exist on crates.io)
vrf = { version = "0.2", optional = true }
schnorrkel = { version = "0.11", optional = true }

# Networking
bytes = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Utilities
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"

# Note: pipeline_benchmark is defined as an example below, not a bench
# [[bench]]
# name = "pipeline_benchmark"
# harness = false

# DISABLED: Examples can't resolve betanet crate import from src/betanet/examples/ location
# Examples are in wrong directory (should be at package root in examples/)
# Re-enable later by moving to proper location or using path-based imports
# [[example]]
# name = "simple_mixnode"
# path = "examples/simple_mixnode.rs"

# [[example]]
# name = "pipeline_benchmark"
# path = "examples/pipeline_benchmark.rs"